<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    app:cardBackgroundColor="@color/background_white"
    app:cardCornerRadius="13dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/hubungi_kami"
                android:textColor="@color/text_black"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/IBClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icon_close"
                android:tooltipText="@string/tutup"
                app:tint="@color/icon_gray"
                tools:ignore="ContentDescription,UnusedAttribute"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/nomor_telepon"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/titik_dua"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/TVNomorTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:gravity="start"
                android:text="@string/_021_65701116_ext_2221"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/nomor_handphone"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/titik_dua"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/TVNomorHandphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:gravity="start"
                android:text="@string/_08121370037"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/alamat_email"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/titik_dua"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/TVAlamatEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:gravity="start"
                android:text="@string/achmadtoha_basarnas_go_id"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnDownloadPanduan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/background_navy"
            android:letterSpacing="0"
            android:text="@string/download_panduan"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>