<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="0dp"
    android:background="@color/background_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="133dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_basarnas"
            android:src="@drawable/img_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_navy"
            android:textSize="27sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/username"
                android:textColor="@color/text_navy"
                android:textSize="13sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/background_white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxStrokeColor="@color/border_orange"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/masukkan_username_anda"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/background_cursor"
                    android:textSize="13sp"
                    android:textStyle="normal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/text_navy"
                android:textSize="13sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/background_white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxStrokeColor="@color/border_orange"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/masukkan_password_anda"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/background_cursor"
                    android:textSize="13sp"
                    android:textStyle="normal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/username_atau_password_salah"
                android:textColor="@color/text_error"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVPanduanPengguna"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/panduan_pengguna"
                    android:textColor="@color/text_black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/TVLupaPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/lupa_password"
                    android:textColor="@color/text_orange"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/background_orange_disabled"
                android:enabled="false"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/pengguna_baru"
                    android:textColor="@color/text_navy"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/TVDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/daftar"
                    android:textColor="@color/text_orange"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>